@@ -1,1 +1,1 @@
-# Version: 2create rectangle 15.0 36.0 346.0 63.0 -disabledwidth 0 -fill #fffb87 -tags {std rect xxx/117748800}import 226.0 104.0 -file images/penguin.gif -below xxx/117748804 -tags xxx/117748801create polygon 130.0 136.0 20.0 132.0 9.0 158.0 12.0 186.0 105.0 182.0 211.0 176.0 255.0 145.0 230.0 153.0 220.0 136.0 -fill #fffda8 -outline black -smooth 1 -splinesteps 5 -tags {std poly xxx/117748804}create polygon 58.0 79.0 25.0 82.0 19.0 98.0 29.0 121.0 77.0 125.0 149.0 125.0 215.0 123.0 249.0 120.0 272.0 113.0 278.0 98.0 307.0 112.0 265.0 84.0 229.0 82.0 -fill #9fff8a -outline black -smooth 1 -splinesteps 4 -tags {std poly xxx/117748805}create polygon 164.0 280.0 58.0 276.0 17.0 279.0 20.0 334.0 45.0 338.0 106.0 328.0 233.0 332.0 250.0 301.0 256.0 235.0 245.0 279.0 192.0 278.0 -fill #ffa1aa -outline black -smooth 1 -splinesteps 4 -tags {std poly xxx/117748806}create polygon 119.0 203.0 16.0 203.0 -4.0 222.0 13.0 249.0 97.0 248.0 244.0 248.0 264.0 185.0 244.0 209.0 179.0 203.0 -fill #d7ffb5 -outline black -smooth 1 -splinesteps 5 -tags {std polygon xxx/117748807}create text 26.0 9.0 -anchor nw -font {Helvetica 5 normal} -tags {std text xxx/117748808} -text {Welcome to The Coccinella}create text 28.0 45.0 -anchor nw -font {Helvetica 2 normal} -tags {std text xxx/117748809} -text {The Jabber chat program with an innovative whiteboard}create text 34.0 91.0 -anchor nw -font {Helvetica 2 normal} -tags {std text xxx/117748810} -text {Start by registering a new Jabber account\nif you not already have one.}create text 21.0 142.0 -anchor nw -font {Helvetica 2 normal} -tags {std text xxx/117748811} -text {Send single text instant messages,\none-to-one chats, and groupchats\nin rooms.}create text 14.0 214.0 -anchor nw -font {Helvetica 2 normal} -tags {std text xxx/117748812} -text {Whiteboard communication as messages\nperson-to-person chat, and groupchat.}create text 29.0 285.0 -anchor nw -font {Helvetica 2 normal} -tags {std text xxx/117748813} -text {On Macs and Windows full QuickTime\nsupport in the whiteboard. Download\nQuickTime for free if you not already\nhave it.}
+# Version: 2create rectangle 15.0 36.0 346.0 63.0 -disabledwidth 0 -fill #fffb87 -tags {std rectangle xxx/117748800}import 226.0 104.0 -file images/penguin.gif -below xxx/117748804 -tags xxx/117748801create polygon 130.0 136.0 20.0 132.0 9.0 158.0 12.0 186.0 105.0 182.0 211.0 176.0 255.0 145.0 230.0 153.0 220.0 136.0 -fill #fffda8 -outline black -smooth 1 -splinesteps 5 -tags {std poly xxx/117748804}create polygon 58.0 79.0 25.0 82.0 19.0 98.0 29.0 121.0 77.0 125.0 149.0 125.0 215.0 123.0 249.0 120.0 272.0 113.0 278.0 98.0 307.0 112.0 265.0 84.0 229.0 82.0 -fill #9fff8a -outline black -smooth 1 -splinesteps 4 -tags {std poly xxx/117748805}create polygon 164.0 280.0 58.0 276.0 17.0 279.0 20.0 334.0 45.0 338.0 106.0 328.0 233.0 332.0 250.0 301.0 256.0 235.0 245.0 279.0 192.0 278.0 -fill #ffa1aa -outline black -smooth 1 -splinesteps 4 -tags {std poly xxx/117748806}create polygon 119.0 203.0 16.0 203.0 -4.0 222.0 13.0 249.0 97.0 248.0 244.0 248.0 264.0 185.0 244.0 209.0 179.0 203.0 -fill #d7ffb5 -outline black -smooth 1 -splinesteps 5 -tags {std polygon xxx/117748807}create text 26.0 9.0 -anchor nw -font {Helvetica 5 normal} -tags {std text xxx/117748808} -text {Welcome to The Coccinella}create text 28.0 45.0 -anchor nw -font {Helvetica 2 normal} -tags {std text xxx/117748809} -text {The Jabber chat program with an innovative whiteboard}create text 34.0 91.0 -anchor nw -font {Helvetica 2 normal} -tags {std text xxx/117748810} -text {Start by registering a new Jabber account\nif you not already have one.}create text 21.0 142.0 -anchor nw -font {Helvetica 2 normal} -tags {std text xxx/117748811} -text {Send single text instant messages,\none-to-one chats, and groupchats\nin rooms.}create text 14.0 214.0 -anchor nw -font {Helvetica 2 normal} -tags {std text xxx/117748812} -text {Whiteboard communication as messages\nperson-to-person chat, and groupchat.}create text 29.0 285.0 -anchor nw -font {Helvetica 2 normal} -tags {std text xxx/117748813} -text {On Macs and Windows full QuickTime\nsupport in the whiteboard. Download\nQuickTime for free if you not already\nhave it.}
